--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "test": "atom --test spec",
-    "clean": "shx rm -r -f -v node_modules",
+    "clean": "shx rm -rf -v node_modules",
     "build": "npm install && cross-env NODE_ENV=production npm install"
   },
   "devDependencies": {
