--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "test": "atom --test spec",
     "clean": "shx rm -rf -v node_modules",
-    "build": "npm install && cross-env NODE_ENV=production npm install"
+    "build": "npm install && npm run clean && npm --production install"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
